--- a/boomBox.css
+++ b/boomBox.css
@@ -20,10 +20,32 @@ img
 
 #buttonDiv
 {
-	margin-left: 42%
+	height: 50%;
+	margin-left: 30%;
+}
+
+#buttonDiv img
+{
+	margin: 0;
+	width: 10%;
+    height: auto;
+    display: inline;
+    float:left;
+    padding-left: 3%;
 	
 
 }
+
+#playButton
+{
+	width: 25%;
+	height: 25%;
+}
+
+/*images buttons*/
+
+
+
 
 #boomBoxDiv
 {
