--- a/boomBox.css
+++ b/boomBox.css
@@ -12,51 +12,57 @@ body
 
 }
 
-/*boomBox*/
-img
+#songDisplay
 {
-	margin-left: 32%;
-}
-
-/*mainContainer*/
-#mainContainer
-{
-
-	height: 50%;
-	width: 15%;
-	margin-left: 30%;
-
+	text-align: center;
+	font-size: 3em;
+	border: solid;
+	border-width: 5px;
 
 }
 
 
-/*buttons*/
-
-#buttonDiv
+#Maincontainer
 {
-	height: 50%;
-	margin-left: 30%;
+	border-style: solid;
+    border-width: 10px;
+    width:25em;
+    margin-left: 35%;
 }
 
-/*images */
-
-#buttonDiv img
+#boomBoxPicture
 {
-	margin: 0;
-	width: 10%;
-    height: auto;
-    display: inline;
-    float:left;
-    padding-left: 3%;
-	
+
+	display:block;
 
 }
 
-#playButton
+#backButton, #nextButton,#stopButton,#playButton
 {
-	width: 25%;
-	height: 25%;
+	height: 20%;
+	width: 20%;
+	margin-left: 3%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
